@@ -1,22 +1,20 @@
 package work.slhaf.partner.core.action.runner.execution;
 
 import lombok.Data;
+import work.slhaf.partner.core.action.runner.policy.WrappedLaunchSpec;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.AtomicInteger;
 
 public class CommandExecutionService {
 
     public static final CommandExecutionService INSTANCE = new CommandExecutionService();
-
-    private final ExecutorService readerExecutor = Executors.newVirtualThreadPerTaskExecutor();
 
     private CommandExecutionService() {
     }
@@ -37,17 +35,15 @@ public class CommandExecutionService {
         return exec(commands.toArray(new String[0]));
     }
 
-    public Result exec(String... commands) {
+    public Result exec(WrappedLaunchSpec launchSpec) {
         Result result = new Result();
         List<String> output = new ArrayList<>();
         List<String> error = new ArrayList<>();
 
         try {
-            Process process = new ProcessBuilder(commands)
-                    .redirectErrorStream(false)
-                    .start();
+            Process process = startProcess(launchSpec);
 
-            Thread stdoutThread = new Thread(() -> {
+            Thread stdoutThread = Thread.startVirtualThread(() -> {
                 try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
                     String line;
                     while ((line = reader.readLine()) != null) {
@@ -57,7 +53,7 @@ public class CommandExecutionService {
                 }
             });
 
-            Thread stderrThread = new Thread(() -> {
+            Thread stderrThread = Thread.startVirtualThread(() -> {
                 try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
                     String line;
                     while ((line = reader.readLine()) != null) {
@@ -66,9 +62,6 @@ public class CommandExecutionService {
                 } catch (Exception ignored) {
                 }
             });
-
-            readerExecutor.execute(stdoutThread);
-            readerExecutor.execute(stderrThread);
 
             int exitCode = process.waitFor();
             stdoutThread.join();
@@ -85,15 +78,17 @@ public class CommandExecutionService {
         return result;
     }
 
+    public Result exec(String... commands) {
+        return exec(defaultLaunchSpec(commands));
+    }
+
     public CommandSession createSessionTask(List<String> commands) {
         return createSessionTask(commands.toArray(new String[0]));
     }
 
-    public CommandSession createSessionTask(String... commands) {
+    public CommandSession createSessionTask(WrappedLaunchSpec launchSpec) {
         try {
-            Process process = new ProcessBuilder(commands)
-                    .redirectErrorStream(false)
-                    .start();
+            Process process = startProcess(launchSpec);
             CommandSession session = new CommandSession();
             StringBuilder stdoutBuffer = new StringBuilder();
             StringBuilder stderrBuffer = new StringBuilder();
@@ -101,13 +96,17 @@ public class CommandExecutionService {
             session.setStdoutBuffer(stdoutBuffer);
             session.setStderrBuffer(stderrBuffer);
 
-            readerExecutor.execute(() -> readToBuffer(process.getInputStream(), stdoutBuffer));
-            readerExecutor.execute(() -> readToBuffer(process.getErrorStream(), stderrBuffer));
+            Thread.startVirtualThread(() -> readToBuffer(process.getInputStream(), stdoutBuffer));
+            Thread.startVirtualThread(() -> readToBuffer(process.getErrorStream(), stderrBuffer));
 
             return session;
         } catch (Exception e) {
             throw new IllegalStateException("创建命令会话失败", e);
         }
+    }
+
+    public CommandSession createSessionTask(String... commands) {
+        return createSessionTask(defaultLaunchSpec(commands));
     }
 
     private void readToBuffer(java.io.InputStream inputStream, StringBuilder buffer) {
@@ -123,6 +122,31 @@ public class CommandExecutionService {
             }
         } catch (Exception ignored) {
         }
+    }
+
+    private Process startProcess(WrappedLaunchSpec launchSpec) throws Exception {
+        ProcessBuilder processBuilder = new ProcessBuilder();
+        List<String> command = new ArrayList<>();
+        command.add(launchSpec.getCommand());
+        command.addAll(launchSpec.getArgs());
+        processBuilder.command(command);
+        processBuilder.redirectErrorStream(false);
+        if (launchSpec.getWorkingDirectory() != null && !launchSpec.getWorkingDirectory().isBlank()) {
+            processBuilder.directory(new File(launchSpec.getWorkingDirectory()));
+        }
+        Map<String, String> environment = processBuilder.environment();
+        environment.clear();
+        environment.putAll(launchSpec.getEnvironment());
+        return processBuilder.start();
+    }
+
+    private WrappedLaunchSpec defaultLaunchSpec(String... commands) {
+        return new WrappedLaunchSpec(
+                commands[0],
+                List.of(commands).subList(1, commands.length),
+                null,
+                System.getenv()
+        );
     }
 
     @Data
